# [[file:~/Workspace/Programming/chem-utils/chem-utils.note::3bed171f-a5c3-45be-a1f0-75e182daf61e][3bed171f-a5c3-45be-a1f0-75e182daf61e]]
[package]
name = "go"
version = "0.0.1"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
approx = "*"
cgmath = "*"
nom = "*"
timeit = "*"
# 3bed171f-a5c3-45be-a1f0-75e182daf61e ends here
